refactor(LineService): section과 관련된 책임을 SectionService로 분리